//@ts-nocheck
import { Rpc } from '../../../helpers.js';
import { BinaryReader } from '../../../binary.js';
import { QueryClient, createProtobufRpcClient } from '@cosmjs/stargate';
import {
  QueryValidatorsRequest,
  QueryValidatorsResponse,
  QueryValidatorRequest,
  QueryValidatorResponse,
  QueryValidatorDelegationsRequest,
  QueryValidatorDelegationsResponse,
  QueryValidatorUnbondingDelegationsRequest,
  QueryValidatorUnbondingDelegationsResponse,
  QueryDelegationRequest,
  QueryDelegationResponse,
  QueryUnbondingDelegationRequest,
  QueryUnbondingDelegationResponse,
  QueryDelegatorDelegationsRequest,
  QueryDelegatorDelegationsResponse,
  QueryDelegatorUnbondingDelegationsRequest,
  QueryDelegatorUnbondingDelegationsResponse,
  QueryRedelegationsRequest,
  QueryRedelegationsResponse,
  QueryDelegatorValidatorsRequest,
  QueryDelegatorValidatorsResponse,
  QueryDelegatorValidatorRequest,
  QueryDelegatorValidatorResponse,
  QueryHistoricalInfoRequest,
  QueryHistoricalInfoResponse,
  QueryPoolRequest,
  QueryPoolResponse,
  QueryParamsRequest,
  QueryParamsResponse,
} from './query.js';
/** Query defines the gRPC querier service. */
export interface Query {
  /** Validators queries all validators that match the given status. */
  validators(request: QueryValidatorsRequest): Promise<QueryValidatorsResponse>;
  /** Validator queries validator info for given validator address. */
  validator(request: QueryValidatorRequest): Promise<QueryValidatorResponse>;
  /** ValidatorDelegations queries delegate info for given validator. */
  validatorDelegations(
    request: QueryValidatorDelegationsRequest,
  ): Promise<QueryValidatorDelegationsResponse>;
  /** ValidatorUnbondingDelegations queries unbonding delegations of a validator. */
  validatorUnbondingDelegations(
    request: QueryValidatorUnbondingDelegationsRequest,
  ): Promise<QueryValidatorUnbondingDelegationsResponse>;
  /** Delegation queries delegate info for given validator delegator pair. */
  delegation(request: QueryDelegationRequest): Promise<QueryDelegationResponse>;
  /**
   * UnbondingDelegation queries unbonding info for given validator delegator
   * pair.
   */
  unbondingDelegation(
    request: QueryUnbondingDelegationRequest,
  ): Promise<QueryUnbondingDelegationResponse>;
  /** DelegatorDelegations queries all delegations of a given delegator address. */
  delegatorDelegations(
    request: QueryDelegatorDelegationsRequest,
  ): Promise<QueryDelegatorDelegationsResponse>;
  /**
   * DelegatorUnbondingDelegations queries all unbonding delegations of a given
   * delegator address.
   */
  delegatorUnbondingDelegations(
    request: QueryDelegatorUnbondingDelegationsRequest,
  ): Promise<QueryDelegatorUnbondingDelegationsResponse>;
  /** Redelegations queries redelegations of given address. */
  redelegations(
    request: QueryRedelegationsRequest,
  ): Promise<QueryRedelegationsResponse>;
  /**
   * DelegatorValidators queries all validators info for given delegator
   * address.
   */
  delegatorValidators(
    request: QueryDelegatorValidatorsRequest,
  ): Promise<QueryDelegatorValidatorsResponse>;
  /**
   * DelegatorValidator queries validator info for given delegator validator
   * pair.
   */
  delegatorValidator(
    request: QueryDelegatorValidatorRequest,
  ): Promise<QueryDelegatorValidatorResponse>;
  /** HistoricalInfo queries the historical info for given height. */
  historicalInfo(
    request: QueryHistoricalInfoRequest,
  ): Promise<QueryHistoricalInfoResponse>;
  /** Pool queries the pool info. */
  pool(request?: QueryPoolRequest): Promise<QueryPoolResponse>;
  /** Parameters queries the staking parameters. */
  params(request?: QueryParamsRequest): Promise<QueryParamsResponse>;
}
export class QueryClientImpl implements Query {
  private readonly rpc: Rpc;
  constructor(rpc: Rpc) {
    this.rpc = rpc;
    this.validators = this.validators.bind(this);
    this.validator = this.validator.bind(this);
    this.validatorDelegations = this.validatorDelegations.bind(this);
    this.validatorUnbondingDelegations =
      this.validatorUnbondingDelegations.bind(this);
    this.delegation = this.delegation.bind(this);
    this.unbondingDelegation = this.unbondingDelegation.bind(this);
    this.delegatorDelegations = this.delegatorDelegations.bind(this);
    this.delegatorUnbondingDelegations =
      this.delegatorUnbondingDelegations.bind(this);
    this.redelegations = this.redelegations.bind(this);
    this.delegatorValidators = this.delegatorValidators.bind(this);
    this.delegatorValidator = this.delegatorValidator.bind(this);
    this.historicalInfo = this.historicalInfo.bind(this);
    this.pool = this.pool.bind(this);
    this.params = this.params.bind(this);
  }
  validators(
    request: QueryValidatorsRequest,
  ): Promise<QueryValidatorsResponse> {
    const data = QueryValidatorsRequest.encode(request).finish();
    const promise = this.rpc.request(
      'cosmos.staking.v1beta1.Query',
      'Validators',
      data,
    );
    return promise.then(data =>
      QueryValidatorsResponse.decode(new BinaryReader(data)),
    );
  }
  validator(request: QueryValidatorRequest): Promise<QueryValidatorResponse> {
    const data = QueryValidatorRequest.encode(request).finish();
    const promise = this.rpc.request(
      'cosmos.staking.v1beta1.Query',
      'Validator',
      data,
    );
    return promise.then(data =>
      QueryValidatorResponse.decode(new BinaryReader(data)),
    );
  }
  validatorDelegations(
    request: QueryValidatorDelegationsRequest,
  ): Promise<QueryValidatorDelegationsResponse> {
    const data = QueryValidatorDelegationsRequest.encode(request).finish();
    const promise = this.rpc.request(
      'cosmos.staking.v1beta1.Query',
      'ValidatorDelegations',
      data,
    );
    return promise.then(data =>
      QueryValidatorDelegationsResponse.decode(new BinaryReader(data)),
    );
  }
  validatorUnbondingDelegations(
    request: QueryValidatorUnbondingDelegationsRequest,
  ): Promise<QueryValidatorUnbondingDelegationsResponse> {
    const data =
      QueryValidatorUnbondingDelegationsRequest.encode(request).finish();
    const promise = this.rpc.request(
      'cosmos.staking.v1beta1.Query',
      'ValidatorUnbondingDelegations',
      data,
    );
    return promise.then(data =>
      QueryValidatorUnbondingDelegationsResponse.decode(new BinaryReader(data)),
    );
  }
  delegation(
    request: QueryDelegationRequest,
  ): Promise<QueryDelegationResponse> {
    const data = QueryDelegationRequest.encode(request).finish();
    const promise = this.rpc.request(
      'cosmos.staking.v1beta1.Query',
      'Delegation',
      data,
    );
    return promise.then(data =>
      QueryDelegationResponse.decode(new BinaryReader(data)),
    );
  }
  unbondingDelegation(
    request: QueryUnbondingDelegationRequest,
  ): Promise<QueryUnbondingDelegationResponse> {
    const data = QueryUnbondingDelegationRequest.encode(request).finish();
    const promise = this.rpc.request(
      'cosmos.staking.v1beta1.Query',
      'UnbondingDelegation',
      data,
    );
    return promise.then(data =>
      QueryUnbondingDelegationResponse.decode(new BinaryReader(data)),
    );
  }
  delegatorDelegations(
    request: QueryDelegatorDelegationsRequest,
  ): Promise<QueryDelegatorDelegationsResponse> {
    const data = QueryDelegatorDelegationsRequest.encode(request).finish();
    const promise = this.rpc.request(
      'cosmos.staking.v1beta1.Query',
      'DelegatorDelegations',
      data,
    );
    return promise.then(data =>
      QueryDelegatorDelegationsResponse.decode(new BinaryReader(data)),
    );
  }
  delegatorUnbondingDelegations(
    request: QueryDelegatorUnbondingDelegationsRequest,
  ): Promise<QueryDelegatorUnbondingDelegationsResponse> {
    const data =
      QueryDelegatorUnbondingDelegationsRequest.encode(request).finish();
    const promise = this.rpc.request(
      'cosmos.staking.v1beta1.Query',
      'DelegatorUnbondingDelegations',
      data,
    );
    return promise.then(data =>
      QueryDelegatorUnbondingDelegationsResponse.decode(new BinaryReader(data)),
    );
  }
  redelegations(
    request: QueryRedelegationsRequest,
  ): Promise<QueryRedelegationsResponse> {
    const data = QueryRedelegationsRequest.encode(request).finish();
    const promise = this.rpc.request(
      'cosmos.staking.v1beta1.Query',
      'Redelegations',
      data,
    );
    return promise.then(data =>
      QueryRedelegationsResponse.decode(new BinaryReader(data)),
    );
  }
  delegatorValidators(
    request: QueryDelegatorValidatorsRequest,
  ): Promise<QueryDelegatorValidatorsResponse> {
    const data = QueryDelegatorValidatorsRequest.encode(request).finish();
    const promise = this.rpc.request(
      'cosmos.staking.v1beta1.Query',
      'DelegatorValidators',
      data,
    );
    return promise.then(data =>
      QueryDelegatorValidatorsResponse.decode(new BinaryReader(data)),
    );
  }
  delegatorValidator(
    request: QueryDelegatorValidatorRequest,
  ): Promise<QueryDelegatorValidatorResponse> {
    const data = QueryDelegatorValidatorRequest.encode(request).finish();
    const promise = this.rpc.request(
      'cosmos.staking.v1beta1.Query',
      'DelegatorValidator',
      data,
    );
    return promise.then(data =>
      QueryDelegatorValidatorResponse.decode(new BinaryReader(data)),
    );
  }
  historicalInfo(
    request: QueryHistoricalInfoRequest,
  ): Promise<QueryHistoricalInfoResponse> {
    const data = QueryHistoricalInfoRequest.encode(request).finish();
    const promise = this.rpc.request(
      'cosmos.staking.v1beta1.Query',
      'HistoricalInfo',
      data,
    );
    return promise.then(data =>
      QueryHistoricalInfoResponse.decode(new BinaryReader(data)),
    );
  }
  pool(request: QueryPoolRequest = {}): Promise<QueryPoolResponse> {
    const data = QueryPoolRequest.encode(request).finish();
    const promise = this.rpc.request(
      'cosmos.staking.v1beta1.Query',
      'Pool',
      data,
    );
    return promise.then(data =>
      QueryPoolResponse.decode(new BinaryReader(data)),
    );
  }
  params(request: QueryParamsRequest = {}): Promise<QueryParamsResponse> {
    const data = QueryParamsRequest.encode(request).finish();
    const promise = this.rpc.request(
      'cosmos.staking.v1beta1.Query',
      'Params',
      data,
    );
    return promise.then(data =>
      QueryParamsResponse.decode(new BinaryReader(data)),
    );
  }
}
export const createRpcQueryExtension = (base: QueryClient) => {
  const rpc = createProtobufRpcClient(base);
  const queryService = new QueryClientImpl(rpc);
  return {
    validators(
      request: QueryValidatorsRequest,
    ): Promise<QueryValidatorsResponse> {
      return queryService.validators(request);
    },
    validator(request: QueryValidatorRequest): Promise<QueryValidatorResponse> {
      return queryService.validator(request);
    },
    validatorDelegations(
      request: QueryValidatorDelegationsRequest,
    ): Promise<QueryValidatorDelegationsResponse> {
      return queryService.validatorDelegations(request);
    },
    validatorUnbondingDelegations(
      request: QueryValidatorUnbondingDelegationsRequest,
    ): Promise<QueryValidatorUnbondingDelegationsResponse> {
      return queryService.validatorUnbondingDelegations(request);
    },
    delegation(
      request: QueryDelegationRequest,
    ): Promise<QueryDelegationResponse> {
      return queryService.delegation(request);
    },
    unbondingDelegation(
      request: QueryUnbondingDelegationRequest,
    ): Promise<QueryUnbondingDelegationResponse> {
      return queryService.unbondingDelegation(request);
    },
    delegatorDelegations(
      request: QueryDelegatorDelegationsRequest,
    ): Promise<QueryDelegatorDelegationsResponse> {
      return queryService.delegatorDelegations(request);
    },
    delegatorUnbondingDelegations(
      request: QueryDelegatorUnbondingDelegationsRequest,
    ): Promise<QueryDelegatorUnbondingDelegationsResponse> {
      return queryService.delegatorUnbondingDelegations(request);
    },
    redelegations(
      request: QueryRedelegationsRequest,
    ): Promise<QueryRedelegationsResponse> {
      return queryService.redelegations(request);
    },
    delegatorValidators(
      request: QueryDelegatorValidatorsRequest,
    ): Promise<QueryDelegatorValidatorsResponse> {
      return queryService.delegatorValidators(request);
    },
    delegatorValidator(
      request: QueryDelegatorValidatorRequest,
    ): Promise<QueryDelegatorValidatorResponse> {
      return queryService.delegatorValidator(request);
    },
    historicalInfo(
      request: QueryHistoricalInfoRequest,
    ): Promise<QueryHistoricalInfoResponse> {
      return queryService.historicalInfo(request);
    },
    pool(request?: QueryPoolRequest): Promise<QueryPoolResponse> {
      return queryService.pool(request);
    },
    params(request?: QueryParamsRequest): Promise<QueryParamsResponse> {
      return queryService.params(request);
    },
  };
};
